Task0 (#2)
* Temporary change file to verify CI

* Revert file change

* Add mutation testing

* Test parseConfig

* Add extension to retry falling tests

* Be serious, stupid

* Implement task 0

* Update CI/CD

* Update CI/CD